--- a/src/Solution.Locator.Web.Mvc/Views/Account/Login.cshtml
+++ b/src/Solution.Locator.Web.Mvc/Views/Account/Login.cshtml
@@ -47,8 +47,8 @@
             </div>
             <div class="row">
                 <div class="col-xs-8 p-t-5">
-                    <input type="checkbox" name="RememberMe" id="rememberme" class="filled-in chk-col-pink" value="true">
-                    <label for="rememberme">@L("RememberMe")</label>
+                    @*<input type="checkbox" name="RememberMe" id="rememberme" class="filled-in chk-col-pink" value="true">
+                    <label for="rememberme">@L("RememberMe")</label>*@
                 </div>
                 <div class="col-xs-4">
                     <button id="LoginButton" class="btn btn-block bg-pink waves-effect" type="submit">@L("LogIn")</button>
@@ -58,7 +58,7 @@
             {
                 <div class="row m-t-15 m-b--20">
                     <div class="col-xs-12">
-                        <a asp-action="Register">@L("Register")</a>
+                        <a asp-action="Register">Registrar</a>
                     </div>
                 </div>
             }
