--- a/src/Solution.Locator.Web.Mvc/Views/Friends/Index.cshtml
+++ b/src/Solution.Locator.Web.Mvc/Views/Friends/Index.cshtml
@@ -46,7 +46,7 @@
                                         <i class="material-icons">menu</i>
                                     </a>
                                     <ul class="dropdown-menu pull-right">
-                                        <li><a href="#" class="waves-effect waves-block edit-atacched-games" data-friend-id="@friend.Id" data-toggle="modal" data-target="#AtacchedGamesModal"><i class="material-icons">edit</i>Vincular Jogos</a></li>
+                                        <li><a href="#" class="waves-effect waves-block edit-attached-games" data-friend-id="@friend.Id" data-toggle="modal" data-target="#AttachedGamesModal"><i class="material-icons">edit</i>Vincular Jogos</a></li>
                                         <li><a href="#" class="waves-effect waves-block edit-friend" data-friend-id="@friend.Id" data-toggle="modal" data-target="#FriendEditModal"><i class="material-icons">edit</i>@L("Edit")</a></li>
                                         <li><a href="#" class="waves-effect waves-block delete-friend" data-friend-id="@friend.Id" data-friend-name="@friend.Name"><i class="material-icons">delete_sweep</i>@L("Delete")</a></li>
                                     </ul>
@@ -110,7 +110,7 @@
     </div>
 </div>
 
-<div class="modal fade" id="AtacchedGamesModal" tabindex="-1" role="dialog" aria-labelledby="AtacchedGamesModalLabel" data-backdrop="static">
+<div class="modal fade" id="AttachedGamesModal" tabindex="-1" role="dialog" aria-labelledby="AttachedGamesModalLabel" data-backdrop="static">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
 
