--- a/src/Solution.Locator.Web.Mvc/Views/Home/Index.cshtml
+++ b/src/Solution.Locator.Web.Mvc/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
                 <i class="material-icons">playlist_add_check</i>
             </div>
             <div class="content">
-                <div class="text">Jogos</div>
+                <div class="text">Jogos Disponíveis</div>
                 <div class="number count-to" data-from="0" data-to="@Model.GamesAvailable" data-speed="1000" data-fresh-interval="20"></div>
             </div>
         </div>
