--- a/src/Solution.Locator.Web.Mvc/Views/Shared/_Layout.cshtml
+++ b/src/Solution.Locator.Web.Mvc/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
 
     <link rel="shortcut icon" href="~/favicon.ico">
 
-    <title>Locator</title>
+    <title>Emprestar Jogo System</title>
 
     <environment names="Development">
         <link href="~/fonts/roboto/roboto.css" rel="stylesheet" asp-append-version="true" />
@@ -102,7 +102,7 @@
             <div class="navbar-header">
                 <a href="javascript:void(0);" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false"></a>
                 <a href="javascript:void(0);" class="bars"></a>
-                <a class="navbar-brand" asp-controller="Home" asp-action="Index"><i class="fa fa-cubes"></i> Locator</a>
+                <a class="navbar-brand" asp-controller="Home" asp-action="Index"><i class="fa fa-cubes"></i> Emprestar Jogo System</a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -127,7 +127,7 @@
             <!-- Footer -->
             <div class="legal">
                 <div class="copyright">
-                    &copy; @DateTime.Now.Year <a href="javascript:void(0);">Locator</a>.
+                    &copy; @DateTime.Now.Year <a href="javascript:void(0);">Emprestar Jogo System</a>
                 </div>
                 <div class="version">
                     <b>Version </b> @AppVersionHelper.Version [@AppVersionHelper.ReleaseDate.ToString("yyyyMMdd")]
