--- a/src/Solution.Locator.Web.Mvc/Views/Account/Register.cshtml
+++ b/src/Solution.Locator.Web.Mvc/Views/Account/Register.cshtml
@@ -74,7 +74,7 @@
             
             <div class="row">
                 <div class="col-xs-12">
-                    <a asp-action="Login" class="btn btn-default waves-effect" >@L("Back")</a>
+                    <a asp-action="Login" class="btn btn-default waves-effect" >Voltar</a>
                     <button id="RegisterButton" class="btn bg-pink waves-effect" type="submit">@L("Register")</button>
                 </div>
             </div>
