--- a/src/Solution.Locator.Web.Mvc/Views/Account/_Layout.cshtml
+++ b/src/Solution.Locator.Web.Mvc/Views/Account/_Layout.cshtml
@@ -56,7 +56,7 @@
 
     <div class="login-box">
         <div class="logo">
-            <a href="javascript:void(0);">Locator</a>
+            <a href="javascript:void(0);">Emprestar Jogo</a>
         </div>
 
         @if (MultiTenancyConfig.IsEnabled)
@@ -68,7 +68,7 @@
 
         @RenderBody()
 
-        <vc:account-languages></vc:account-languages>
+        @*<vc:account-languages></vc:account-languages>*@
 
         <div class="row">
             <div class="col-xs-12 text-center" style="color: #e9e9e9">
