--- a/src/Solution.Locator.Web.Mvc/Views/Home/Index.cshtml
+++ b/src/Solution.Locator.Web.Mvc/Views/Home/Index.cshtml
@@ -78,7 +78,7 @@
                         <thead>
                             <tr>
                                 <th>Nome do Amigo</th>
-                                <th>Jogo Empresado</th>
+                                <th>Jogo Emprestados</th>
 
                             </tr>
                         </thead>
