--- a/src/Solution.Locator.Web.Mvc/Views/Roles/Index.cshtml
+++ b/src/Solution.Locator.Web.Mvc/Views/Roles/Index.cshtml
@@ -35,9 +35,9 @@
                 <table class="table">
                     <thead>
                     <tr>
-                        <th>@L("RoleName")</th>
-                        <th>@L("DisplayName")</th>
-                        <th>@L("Actions")</th>
+                        <th>Nome</th>
+                        <th>Detalhe</th>
+                        <th>Ações</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -71,7 +71,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">
-                    <span>@L("CreateNewRole")</span>
+                    <span>Criar Roles</span>
                 </h4>
             </div>
             <div class="modal-body">
@@ -81,7 +81,7 @@
                             <div class="form-group form-float">
                                 <div class="form-line">
                                     <input id="rolename" type="text" name="Name" required maxlength="32" minlength="2" class="validate form-control">
-                                    <label for="rolename" class="form-label">@L("RoleName")</label>
+                                    <label for="rolename" class="form-label">Nome</label>
                                 </div>
                             </div>
                         </div>
@@ -92,7 +92,7 @@
                             <div class="form-group form-float">
                                 <div class="form-line">
                                     <input id="displayname" type="text" name="DisplayName" required maxlength="32" minlength="2" class="validate form-control">
-                                    <label for="displayname" class="form-label">@L("DisplayName")</label>
+                                    <label for="displayname" class="form-label">Detalhe</label>
                                 </div>
                             </div>
                         </div>
@@ -103,7 +103,7 @@
                             <div class="form-group form-float">
                                 <div class="form-line">
                                     <textarea id="role-description" name="Description" class="validate form-control"></textarea>
-                                    <label for="role-description" class="form-label">Role Description</label>
+                                    <label for="role-description" class="form-label">Descrição da Role</label>
                                 </div>
                             </div>
                         </div>
@@ -111,7 +111,7 @@
 
                     <div class="row clearfix">
                         <div class="col-sm-12">
-                            <h4>Permissions</h4>
+                            <h4>Permissões</h4>
                             @foreach (var permission in Model.Permissions)
                             {
                                 <div class="col-sm-6">
