--- a/src/Solution.Locator.Web.Mvc/Views/Roles/_EditRoleModal.cshtml
+++ b/src/Solution.Locator.Web.Mvc/Views/Roles/_EditRoleModal.cshtml
@@ -3,7 +3,7 @@
 @{
     Layout = null;
 }
-@Html.Partial("~/Views/Shared/Modals/_ModalHeader.cshtml", new ModalHeaderViewModel(L("EditRole")))
+@Html.Partial("~/Views/Shared/Modals/_ModalHeader.cshtml", new ModalHeaderViewModel("Editar Roles"))
 
 <div class="modal-body">
     <form name="RoleEditForm" role="form" novalidate class="form-validation">
@@ -14,7 +14,7 @@
                 <div class="form-group form-float">
                     <div class="form-line">
                         <input id="rolename" @(Model.Role.IsStatic ? "disabled":"") type="text" name="Name" value="@Model.Role.Name" required maxlength="32" minlength="2" class="validate form-control">
-                        <label for="rolename" class="form-label">@L("RoleName")</label>
+                        <label for="rolename" class="form-label">Nome</label>
                     </div>
                 </div>
             </div>
@@ -25,7 +25,7 @@
                 <div class="form-group form-float">
                     <div class="form-line">
                         <input id="displayname" type="text" name="DisplayName" value="@Model.Role.DisplayName" required maxlength="32" minlength="2" class="validate form-control">
-                        <label for="displayname" class="form-label">@L("DisplayName")</label>
+                        <label for="displayname" class="form-label">Detalhe</label>
                     </div>
                 </div>
             </div>
@@ -36,7 +36,7 @@
                 <div class="form-group form-float">
                     <div class="form-line">
                         <textarea id="role-description" name="Description" class="validate form-control">@Model.Role.Description</textarea>
-                        <label for="role-description" class="form-label">Role Description</label>
+                        <label for="role-description" class="form-label">Descrição da Role</label>
                     </div>
                 </div>
             </div>
@@ -44,7 +44,7 @@
 
         <div class="row clearfix">
             <div class="col-sm-12">
-                <h4>Permissions</h4>
+                <h4>Permissões</h4>
 
                 @foreach (var permission in Model.Permissions)
                 {
